<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.CreationReunionFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_normal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:id="@+id/create_reunion_fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear_theme"
                android:layout_marginTop="@dimen/margin_moyen">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_title_reu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Thème de la réunion" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <View
                android:id="@+id/separator"
                android:layout_width="@dimen/separator"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:paddingStart="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                android:layout_marginTop="@dimen/margin_moyen"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear_spinner"
                android:layout_marginTop="@dimen/margin_moyen">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/margin_moyen">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_salle"
                        android:text="@string/salle"
                        style="@style/themetitle"/>

                    <Spinner
                        android:id="@+id/spinner_room"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/separator2"
                android:layout_width="@dimen/separator"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:paddingStart="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                android:layout_marginTop="@dimen/margin_moyen"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_moyen">

                <LinearLayout
                    android:id="@+id/linear_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/title_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choisissez_votre_date"
                        style="@style/themetitle"/>

                    <Button
                        android:id="@+id/button"
                        android:layout_width="@dimen/image_width"
                        android:layout_height="@dimen/image_height"
                        android:background="@drawable/ic_date_f"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:clickable="true"
                        android:focusable="true"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_calendar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/themetitle"
                        tools:text="@string/app_name"
                        android:layout_margin="@dimen/margin_normal"/>

                    <TextView
                        android:id="@+id/hour_text"
                        style="@style/themetitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="heure"
                        android:layout_margin="@dimen/margin_normal" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/separator3"
                android:layout_width="@dimen/separator"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:paddingStart="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                android:layout_marginTop="@dimen/margin_moyen"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_moyen">

                <TextView
                    android:id="@+id/title_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entrez_le_nom_des_participants"
                    style="@style/themetitle" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/title_mail_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_title_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_normal"
                        android:hint="@string/marc_pierre" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/button_create_reunion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_moyen"
                android:padding="@dimen/padding_normal"
                android:text="@string/cr_er_la_r_union"
                android:textSize="@dimen/text_title"
                android:textColor="#fff"
                android:background="@drawable/border"
                android:clickable="true"
                android:focusable="true"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>